# crackme

RankGateInsane/client/src/vm/: bytecode_blob.cpp
RankGateInsane/server/app/: __init__.py  challenge_logic.py  config.py  crypto_box.py  sessions.py  verifier.py  vm_reference.py
RankGateInsane/tools/: _smoke_negative.py  _smoke_vm.py
client/: CMakeLists.txt  build.bat
client/src/: app.cpp  app.hpp  common.hpp  constants.hpp  main.cpp
client/src/challenge/: license_format.cpp  license_format.hpp  proof_builder.cpp  proof_builder.hpp  transcript.cpp  transcript.hpp
client/src/crypto/: base64.cpp  base64.hpp  crypto.cpp  crypto.hpp  kdf.cpp  kdf.hpp
client/src/net/: binary_frame.cpp  binary_frame.hpp  http_client.cpp  http_client.hpp  protocol.cpp  protocol.hpp
client/src/protection/: anti_debug.cpp  anti_debug.hpp  anti_tamper.cpp  anti_tamper.hpp  decoys.cpp  decoys.hpp  encoded_strings.hpp  obfuscation.hpp  opaque.hpp
client/src/vm/: bytecode.hpp  opcodes.hpp  vm.cpp  vm.hpp
client/tests/: crypto_vectors.h  selftest_crypto.cpp  selftest_vm.cpp  vm_vectors.h
crackme/: crackme.vcxproj
server/: Dockerfile  requirements.txt
server/app/: bytecode_blob.py  errors.py  main.py  protocol.py
tools/: _gen_crypto_vectors.py  _gen_vm_vectors.py  _test_server.py  disassemble_vm.py  generate_flag_blob.py  generate_license.py  generate_string_splices.py  generate_vm_bytecode.py  parse_transcript.py  solve_full_challenge.py
